testsuite/tests/rename/should_compile/NullaryRecordRecordWildcard.hs
{-# LANGUAGE RecordWildCards #-}

module NullaryRecordRecordWildcard where

data X = X { }

f X {..} = ()
